<?xml version="1.0" encoding="utf-8"?>
<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SOS</string>
    <string name="title">My Application</string>
    <string name="menuTitle">SOS menu</string>

    <string name="frenchButton">French</string>
    <string name="englishButton">Englisch</string>
    <string name="germanButton">German</string>
    <string name="spanishButton">Spanish</string>

    <string name="accueil">Home</string>
    <string name="samu">Medical Service</string>
    <string name="fireman">Firemen</string>
    <string name="help">Help</string>
    <string name="hospital">Hospital</string>

    <string name="language">Language</string>
    <string name="police">Police</string>

    <string name="emergency">Emergency</string>
    <string name="settings">Settings</string>
    <string name="contact">Contacts</string>
    <string name="localisation">Location</string>
    <string name="advice">Advices</string>
    <string name="profile">Profile</string>
    <string name="callEmergency">Call Emergency</string>


    <string name="title_activity_advice">Advices</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_localisation">Location</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_language_first_time" translatable="false">LanguageFirstTime</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="title_activity_list" translatable="false">ListActivity</string>
    <string name="title_activity_reader" translatable="false">ReaderActivity</string>


    <string name="action_settings" translatable="false">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nameTextView">Enter your name</string>
    <string name="firstnameTextView">Enter your firstname</string>


    <string name="locateConsulate">Consulate</string>
    <string name="locatePolice">Police</string>
    <string name="consulate">Consulate</string>
    <string name="policeStation">Police station</string>
    <string name="mapsInstallText">Please install a maps application</string>
    <string name="problemFile">Problem with the file ! </string>

    <string name="name">Name :</string>
    <string name="firstname">Firstname :</string>
    <string name="blood">Blood type :</string>
    <string name="remarks">Medical remarks :</string>
    <string name="adviceList">Advices list : </string>

    <string name="firstTime">This is your first time on the application, please provide your nationality</string>
    <string name="askLocationTitle">Information</string>

    <string name="askLocationText">To fully enjoy the app, please enable geolocation.</string>
    <string name="delete">Delete</string>

    <string name="helpText">
        <b>The different activities\n\n</b>
        <ul>
            <li> <u>Call the emergency\n\n</u></li>
                "The main achievement of this activity is to allow you to call the emergency. By"
                "clicking on this button you will be redirected to your dialer with the emergency's"
                "phone number. All you will have to do next is to press the button call.\n\n"
            <li> <u>Contacts\n\n</u></li>
                "In this activity you will find different numbers of helpful services that you could"
                "need if you are in a plight. For instance you will find the number of the police.\n\n"
            <li> <u>Location\n\n</u></li>
                "In this activity you will find a list of different services you could need. By"
                "clicking on one of them you will be redirected on Google Maps. Then you will just"
                "have to choose your itinerary.\n\n"
            <li> <u>Profile\n\n</u></li>
                "There you can create your profile by specifying your blood type, your medical"
                "treatments or your pathologies. It could be helpful if you had an accident.\n\n"
        </ul>
    </string>

    <string-array name="adviceLabel">
        <item>General advices</item>
        <item>Public transport</item>
        <item>Hotel</item>
        <item>Public places</item>
        <item>Car park</item>
        <item>Robbery</item>
    </string-array>

    <!-- Laisser cette chaine en francais -->
    <string name="queryConsulate">Consulat d\'Angleterre</string>


    <!--> Ne pas traduire dans d'autres nationalité les éléments suivants -->

    <!-- A l'ajout d'une nationalité, ajouter une ligne correspondant a la nationalité choisie
        avec le format suivant
        CODEISO:Nationalité (dans la langue de la nationalité)-->
    <string-array name="nationalityList">
        <item>fr:Français (France) </item>
        <item>en:English (United Kingdom)</item>
        <item>de:Deutsch (Deutschland)</item>
        <item>es:Espagñol (España)</item>
        <item>it:Italiano</item>
        <item>pl:Polski</item>
        <item>pt:Português (Portugal)</item>
    </string-array>

    <string-array name="bloodType">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>


    <string name="queryPolice" translatable="false">Gendarmerie, Police</string>
    <string name="queryHospital" translatable="false">Hôpital</string>

</resources>
