<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.touriste.gendarme.pao.gendarme.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:scrollbars="horizontal">

        <RelativeLayout
            android:id="@+id/globalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true">

            <LinearLayout
                android:id="@+id/emergencyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/emergencyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/emergency" />

                <TextView
                    android:id="@+id/textViewEmergency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/callEmergency"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contactLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/emergencyLayout"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/contactButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contact" />

                <TextView
                    android:id="@+id/textViewContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/adviceLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emergencyLayout"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/adviceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/advice" />

                <TextView
                    android:id="@+id/textViewAdvice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advice"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/localisationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/adviceLayout"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/localisationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/localisation" />

                <TextView
                    android:id="@+id/textViewLocalisation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/localisation"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/localisationLayout"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/profileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile" />

                <TextView

                    android:id="@+id/textViewProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
