<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.touriste.gendarme.pao.gendarme.ContactActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="buttonCall"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/emerLayout">

            <Button
                android:id="@+id/emerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:focusable="true"
                android:onClick="buttonCall"
                android:background="@drawable/emer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/emergency"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/emerLayout"
            android:background="#C0C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="buttonCall"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/firemanLayout"
            android:layout_below="@+id/emerLayout">

            <Button
                android:id="@+id/firemanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:focusable="true"
                android:onClick="buttonCall"
                android:background="@drawable/fireman"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fireman"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"  />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/firemanLayout"
            android:background="#C0C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="buttonCall"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/samuLayout"
            android:layout_below="@+id/firemanLayout"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/samuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:focusable="true"
                android:onClick="buttonCall"
                android:background="@drawable/samu"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/samu"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/samuLayout"
            android:background="#C0C0C0" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="buttonCall"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/policeLayout"
            android:layout_below="@+id/samuLayout"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/policeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:focusable="true"
                android:onClick="buttonCall"
                android:background="@drawable/police"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/police"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/policeLayout"
            android:background="#C0C0C0" />

    </RelativeLayout>
</ScrollView>

