<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context="fr.touriste.gendarme.pao.gendarme.LocalisationActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="buttonLocation"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/consulateLocationLayout">

        <Button
            android:id="@+id/consulateLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:focusable="true"
            android:onClick="buttonLocation"
            android:background="@drawable/consulate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locateConsulate"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/consulateLocationLayout"
        android:background="#C0C0C0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="buttonLocation"
        android:orientation="horizontal"
        android:id="@+id/policeLocationLayout"
        android:layout_below="@+id/consulateLocationLayout"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:nestedScrollingEnabled="false">

        <Button
            android:id="@+id/policeLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:focusable="true"
            android:onClick="buttonLocation"
            android:background="@drawable/police" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locatePolice"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/policeLocationLayout"
        android:background="#C0C0C0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="buttonLocation"
        android:orientation="horizontal"
        android:id="@+id/hospitalLocationLayout"
        android:layout_below="@+id/policeLocationLayout"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:nestedScrollingEnabled="false">

        <Button
            android:id="@+id/hospitalLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:focusable="true"
            android:onClick="buttonLocation"
            android:background="@drawable/samu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/hospitalLocationLayout"
        android:background="#C0C0C0" />
</RelativeLayout>

